<resources>
    <string name="app_name">Farmer Helper</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="title">title</string>
    <string name="tab_tree">Tree</string>
    <string name="tab_flower">Flower</string>
    <string name="tab_vegetable">Vegetable</string>
    <string name="tab_fruit">Fruit</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="plant_name">Plant Name</string>
    <string name="morbidity">Morbidity</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="password_change">Password Change</string>
    <string name="new_password_information">New Password Information</string>
    <string name="change_password">Change Password</string>
    <string name="fullname">FullName</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="empty_item">Empty Item</string>
    <string name="logout">Logout</string>
    <string name="send_email">Send Email</string>
    <string name="share">Share</string>
    <string name="password_wrong">Password wrong</string>
    <string name="sign_in_successfully">SignIn successfully</string>
    <string name="account_not_found">Account not found</string>
    <string name="this_email_is_used">this email is used.</string>
    <string name="inserting_table_is_successfully">Inserting Table is Successfully</string>
    <string name="updating_table_is_successfully">Updating Table is Successfully</string>
    <string name="id_column_is_more_than_zero">Id column is more than zero</string>
    <string name="deleting_item_is_successfully">Deleting item is Successfully</string>
    <string name="cancelled">cancelled</string>
    <string name="logout_now_are_you_sure">logout now. are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_your_password">Please, enter your password!</string>
    <string name="please_enter_your_old_password">Please, enter your old password!</string>
    <string name="passwords_are_not_same">Passwords are not same!</string>
    <string name="full_name_should_be_more_than_4_characters">FullName should be more than 4 characters</string>
    <string name="please_enter_valid_email">Please, enter valid email!</string>
    <string name="item_is_deleting_are_you_sure">Item is deleting. Are you sure? </string>

    <string-array name="genders">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>